--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 application.properties
+src/main/resources/application.properties
+src/test/resources/application.properties
+**/application.properties
+*.properties
 ### STS ###
 .apt_generated
 .classpath
