--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 airnowapi.url=${AIRPORTNOWAPIURL}
-pulsar.service.url=pulsar://pulsar1:6650
 topic.name=persistent://public/default/airquality
+producer.name=airquality
+send.timeout=60
+security.mode=off
+pulsar.service.url=pulsar://pulsar1:6650
+#pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
+pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
+pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
+pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
