--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ pulsar.service.url=pulsar://pulsar1:6650
 pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
 pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
+server.port=8999
