Update MoP, AoP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,25 @@ pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
 pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
+#kafka
+kafka.bootstrapAddress=pulsar1:9092
+#kafka.topic.name=persistent://kop/kop/airquality
+kafka.topic.name=airqualitykafka
+#mqtt
+mqtt.automaticReconnect=true
+mqtt.cleanSession=true
+mqtt.connectionTimeout=60
+mqtt.clientId=airquality-MQTT
+mqtt.hostname=pulsar1
+mqtt.port=1883
+mqtt.topic=airqualitymqtt
+#amqp/rabbitmq
+amqp.server=pulsar1:5672
+amqp.topic=amqp-airquality
+#websockets
+
+# trino/presto sql/pulsar sql
+pulsarsql.jdbc.driver=io.prestosql.jdbc.PrestoDriver
+pulsarsql.jdbc.url=jdbc:presto://pulsar1:8081/pulsar
+pulsarsql.jdbc.username=test-user
+pulsarsql.jdbc.password=
