--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,16 @@ airnowapi.url=${AIRPORTNOWAPIURL}
 topic.name=persistent://public/default/airquality
 producer.name=airquality
 send.timeout=60
-security.mode=off
-pulsar.service.url=pulsar://pulsar1:6650
-#security.mode=on
-#pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
+#security.mode=off
+#pulsar.service.url=pulsar://pulsar1:6650
+security.mode=on
+pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
 pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
 pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
 kafka.bootstrapAddress=pulsar1:9092
-#kafka.topic.name=persistent://kop/kop/airquality
 kafka.topic.name=airqualitykafka
 #mqtt
 mqtt.automaticReconnect=true
@@ -25,9 +24,5 @@ mqtt.topic=airqualitymqtt
 #amqp/rabbitmq
 amqp.server=pulsar1:5672
 amqp.topic=amqp-airquality
-#websockets
-# trino/presto sql/pulsar sql
-pulsarsql.jdbc.driver=io.prestosql.jdbc.PrestoDriver
-pulsarsql.jdbc.url=jdbc:presto://pulsar1:8081/pulsar
-pulsarsql.jdbc.username=test-user
-pulsarsql.jdbc.password=
+logging.level.root=INFO
+logging.level.dev.datainmotion.airquality=INFO
