--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ send.timeout=60
 #security.mode=off
 #pulsar.service.url=pulsar://pulsar1:6650
 security.mode=on
-pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
-pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
-pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
+#pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
+#pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
+#pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
+pulsar.service.url=pulsar+ssl://sn-academy.sndevadvocate.snio.cloud:6651
+pulsar.oauth2.audience=urn:sn:pulsar:sndevadvocate:my-instance
+pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndevadvocate-tspann.json
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
