--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,30 +2,33 @@ airnowapi.url=${AIRPORTNOWAPIURL}
 topic.name=persistent://public/default/airquality
 producer.name=airquality
 send.timeout=60
-#security.mode=off
+security.mode=off
 #pulsar.service.url=pulsar://pulsar1:6650
-security.mode=on
+# local mac
+pulsar.service.url=pulsar://127.0.0.1:6650
+#security.mode=on
 #pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
 #pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
 #pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
-pulsar.service.url=pulsar+ssl://sn-academy.sndevadvocate.snio.cloud:6651
+#pulsar.service.url=pulsar+ssl://sn-academy.sndevadvocate.snio.cloud:6651
 pulsar.oauth2.audience=urn:sn:pulsar:sndevadvocate:my-instance
 pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndevadvocate-tspann.json
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
-kafka.bootstrapAddress=pulsar1:9092
-kafka.topic.name=airqualitykafka
+kafka.bootstrapAddress=localhost:9092
+#kafka.topic.name=airqualitykafka-partition-0
+kafka.topic.name=persistent://public/default/airqualitykafka2
 #mqtt
 mqtt.automaticReconnect=true
 mqtt.cleanSession=true
 mqtt.connectionTimeout=60
 mqtt.clientId=airquality-MQTT
-mqtt.hostname=pulsar1
+mqtt.hostname=localhost
 mqtt.port=1883
 mqtt.topic=airqualitymqtt
 #amqp/rabbitmq
-amqp.server=pulsar1:5672
+amqp.server=localhost:5672
 amqp.topic=amqp-airquality
 logging.level.root=INFO
 logging.level.dev.datainmotion.airquality=INFO
