Update and clean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 airnowapi.url=${AIRPORTNOWAPIURL}
+zipcodes=08520,94027,02199,11962,94957,90402,94301,07070,90265,90272,10013,10007,94123,77449,11368,60629,79936,75034
 topic.name=persistent://public/default/airquality
 producer.name=airquality
 send.timeout=60
