--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-airnowapi.url=${AIRPORTNOWAPIURL}
+airnowapi.api.key=${API_KEY}
+airnowapi.url=https://www.airnowapi.org/aq/observation/zipCode/current
+airnowapi.uri=/?format=application/json&distance=250&zipCode=
+airnowapi.key.name=&API_KEY=
 zipcodes=08520,94027,02199,11962,94957,90402,94301,07070,90265,90272,10013,10007,94123,77449,11368,60629,79936,75034
 topic.name=persistent://public/default/airquality
 producer.name=airquality
@@ -18,7 +21,6 @@ pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
 kafka.bootstrapAddress=localhost:9092
-#kafka.topic.name=airqualitykafka-partition-0
 kafka.topic.name=persistent://public/default/airqualitykafka2
 #mqtt
 mqtt.automaticReconnect=true
