--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ mqtt.hostname=localhost
 mqtt.port=1883
 mqtt.topic=airqualitymqtt
 #amqp/rabbitmq
-amqp.server=localhost:5672
+amqp.server=127.0.0.1:5672
 amqp.topic=amqp-airquality
 logging.level.root=INFO
 logging.level.dev.datainmotion.airquality=INFO
