--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>pulsar</artifactId>
+    <version>1.17.2</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
