--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ topic.name=persistent://public/default/airquality
 producer.name=airquality
 send.timeout=60
 security.mode=off
-#pulsar.service.url=pulsar://pulsar1:6650
+pulsar.service.url=pulsar://pulsar1:6650
 # local mac
-pulsar.service.url=pulsar://127.0.0.1:6650
+#pulsar.service.url=pulsar://127.0.0.1:6650
 #security.mode=on
 #pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
 #pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
@@ -20,18 +20,31 @@ pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndevadvocate-tspan
 pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
-kafka.bootstrapAddress=localhost:9092
+kafka.bootstrapAddress=pulsar1:9092
+#kafka.bootstrapAddress=localhost:9092
 kafka.topic.name=persistent://public/default/airqualitykafka2
 #mqtt
 mqtt.automaticReconnect=true
 mqtt.cleanSession=true
 mqtt.connectionTimeout=60
 mqtt.clientId=airquality-MQTT
+#mqtt.hostname=pulsar1
 mqtt.hostname=localhost
 mqtt.port=1883
 mqtt.topic=airqualitymqtt
 #amqp/rabbitmq
 amqp.server=127.0.0.1:5672
+#amqp.server=pulsar1:5672
 amqp.topic=amqp-airquality
 logging.level.root=INFO
 logging.level.dev.datainmotion.airquality=INFO
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+spring.data.cassandra.request.timeout=10s
+spring.data.cassandra.connection.connect-timeout=10s
+spring.data.cassandra.connection.init-query-timeout=10s
+# CASSANDRA (CassandraProperties)
+spring.data.cassandra.cluster-name=172.17.0.2
+#spring.data.cassandra.cluster-name=pulsar1
+spring.data.cassandra.keyspace-name=airquality
+spring.data.cassandra.port=9042
+spring.data.cassandra.contact-points=172.17.0.2
