--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,6 @@ amqp.server=127.0.0.1:5672
 amqp.topic=amqp-airquality
 logging.level.root=INFO
 logging.level.dev.datainmotion.airquality=INFO
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.request.timeout=10s
 spring.data.cassandra.connection.connect-timeout=10s
 spring.data.cassandra.connection.init-query-timeout=10s
@@ -48,3 +47,4 @@ spring.data.cassandra.cluster-name=172.17.0.2
 spring.data.cassandra.keyspace-name=airquality
 spring.data.cassandra.port=9042
 spring.data.cassandra.contact-points=172.17.0.2
+spring.data.cassandra.schema-action=NONE
