--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,10 +41,13 @@ logging.level.dev.datainmotion.airquality=INFO
 spring.data.cassandra.request.timeout=10s
 spring.data.cassandra.connection.connect-timeout=10s
 spring.data.cassandra.connection.init-query-timeout=10s
-# CASSANDRA (CassandraProperties)
-spring.data.cassandra.cluster-name=172.17.0.2
+scylla.environment=cloud
+scylla.local.dc=AWS_US_EAST_1
+#scylla.environment=docker
 #spring.data.cassandra.cluster-name=pulsar1
 spring.data.cassandra.keyspace-name=airquality
 spring.data.cassandra.port=9042
 spring.data.cassandra.contact-points=172.17.0.2
 spring.data.cassandra.schema-action=NONE
+spring.data.cassandra.username=scylla
+spring.data.cassandra.password=${SCYLLA_PASSWORD}
