--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,10 +44,10 @@ spring.data.cassandra.connection.init-query-timeout=10s
 scylla.environment=cloud
 scylla.local.dc=AWS_US_EAST_1
 #scylla.environment=docker
-#spring.data.cassandra.cluster-name=pulsar1
+#local spring.data.cassandra.contact-points=172.17.0.2
 spring.data.cassandra.keyspace-name=airquality
 spring.data.cassandra.port=9042
-spring.data.cassandra.contact-points=172.17.0.2
+spring.data.cassandra.contact-points="44.206.29.206", "3.217.75.68", "44.205.113.116"
 spring.data.cassandra.schema-action=NONE
 spring.data.cassandra.username=scylla
 spring.data.cassandra.password=${SCYLLA_PASSWORD}
