--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,7 @@ scylla.local.dc=AWS_US_EAST_1
 #local spring.data.cassandra.contact-points=172.17.0.2
 spring.data.cassandra.keyspace-name=airquality
 spring.data.cassandra.port=9042
-spring.data.cassandra.contact-points="44.206.29.206", "3.217.75.68", "44.205.113.116"
+spring.data.cassandra.contact-points=44.206.29.206,3.217.75.68,44.205.113.116
 spring.data.cassandra.schema-action=NONE
 spring.data.cassandra.username=scylla
 spring.data.cassandra.password=${SCYLLA_PASSWORD}
