--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ spring.data.cassandra.request.timeout=10s
 spring.data.cassandra.connection.connect-timeout=10s
 spring.data.cassandra.connection.init-query-timeout=10s
 scylla.environment=cloud
+scylla.local.dc=AWS_US_EAST_1
 #scylla.environment=docker
 #local spring.data.cassandra.contact-points=172.17.0.2
 spring.data.cassandra.keyspace-name=airquality
