--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,52 +4,12 @@ airnowapi.uri=/?format=application/json&distance=250&zipCode=
 airnowapi.key.name=&API_KEY=
 zipcodes=08520,94027,02199,11962,94957,90402,94301,07070,90265,90272,10013,10007,94123,77449,11368,60629,79936,75034
 topic.name=persistent://public/default/airquality
-producer.name=airquality
+producer.name=airqualitykafka
 send.timeout=60
 security.mode=off
-pulsar.service.url=pulsar://pulsar1:6650
-# local mac
-#pulsar.service.url=pulsar://127.0.0.1:6650
-#security.mode=on
-#pulsar.service.url=pulsar+ssl://demo.sndemo.snio.cloud:6651
-#pulsar.oauth2.audience=urn:sn:pulsar:sndemo:demo-cluster
-#pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndemo-tspann.json
-#pulsar.service.url=pulsar+ssl://sn-academy.sndevadvocate.snio.cloud:6651
-pulsar.oauth2.audience=urn:sn:pulsar:sndevadvocate:my-instance
-pulsar.oauth2.credentials-url=file:///Users/tspann/Downloads/sndevadvocate-tspann.json
-pulsar.oauth2.issuer-url=https://auth.streamnative.cloud/
 server.port=8999
 #kafka
-kafka.bootstrapAddress=pulsar1:9092
-#kafka.bootstrapAddress=localhost:9092
-kafka.topic.name=persistent://public/default/airqualitykafka2
-#mqtt
-mqtt.automaticReconnect=true
-mqtt.cleanSession=true
-mqtt.connectionTimeout=60
-mqtt.clientId=airquality-MQTT
-#mqtt.hostname=pulsar1
-mqtt.hostname=localhost
-mqtt.port=1883
-mqtt.topic=airqualitymqtt
-#amqp/rabbitmq
-amqp.server=127.0.0.1:5672
-#amqp.server=pulsar1:5672
-amqp.topic=amqp-airquality
+kafka.bootstrapAddress=kafka:9092
+kafka.topic.name=airquality
 logging.level.root=INFO
 logging.level.dev.datainmotion.airquality=INFO
-spring.data.cassandra.request.timeout=10s
-spring.data.cassandra.connection.connect-timeout=10s
-spring.data.cassandra.connection.init-query-timeout=10s
-#scylla.environment=cloud
-#scylla.local.dc=AWS_US_EAST_1
-scylla.local.dc=datacenter1
-scylla.environment=docker
-#local
-spring.data.cassandra.contact-points=172.17.0.2
-spring.data.cassandra.keyspace-name=airquality
-spring.data.cassandra.port=9042
-#spring.data.cassandra.contact-points=44.206.29.206,3.217.75.68,44.205.113.116
-spring.data.cassandra.schema-action=NONE
-spring.data.cassandra.username=scylla
-spring.data.cassandra.password=${SCYLLA_PASSWORD}
